--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,11 +20,11 @@ android {
     }
 
     defaultConfig {
-        applicationId = "com.circle.pucircle"
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        applicationId "com.circle.pucircle"
+        minSdkVersion 23  // Change this from 21 to 23
+        targetSdkVersion 34
+        versionCode 1
+        versionName "1.0"
     }
 
     buildTypes {
