--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,18 @@
-allprojects {
+buildscript {
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.1'
-        id 'com.google.gms.google-services' version '4.4.2' apply false  // Firebase Plugin
+        classpath 'com.android.tools.build:gradle:8.2.1'  // Update to 8.3 if needed
+        classpath 'com.google.gms:google-services:4.4.2'  // Firebase Plugin
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
     }
 }
 
