--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,23 +30,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.15.0
-  firebase_auth: ^4.7.2
-  cloud_firestore: ^4.8.4
-  firebase_storage: ^11.2.5
-  firebase_messaging: ^14.6.5
-  provider: ^6.0.5
-  image_picker: ^1.0.1
-  cached_network_image: ^3.2.3
-  flutter_image_compress: ^2.0.3
-  video_compress: ^3.1.2
-  intl: ^0.18.1
-  uuid: ^3.0.7
-  flutter_staggered_grid_view: ^0.6.2
-  flutter_card_swiper: ^6.0.0
-  timeago: ^3.4.0
-  loading_animation_widget: ^1.2.0+4
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.17.5
+  firebase_storage: ^11.6.5
+  firebase_messaging: ^14.7.10
+  provider: ^6.1.2
+  image_picker: ^1.1.2
+  cached_network_image: ^3.3.1
+  flutter_image_compress: ^2.4.0
+  video_compress: ^3.1.4
+  intl: ^0.19.0
+  uuid: ^4.5.1
+  flutter_staggered_grid_view: ^0.7.0
+  flutter_card_swiper: ^7.0.2
+  timeago: ^3.7.0
+  loading_animation_widget: ^1.3.0
   cupertino_icons: ^1.0.8
+  url_launcher: ^6.3.1
+  video_player: ^2.9.3
 
 dev_dependencies:
   flutter_test:
